[package]
name = "acir2bristol"
version = "0.1.0"
edition = "2024"

[dependencies]
acir_field = { version = "1.0.0-beta.4", path = "/mnt/d/FunnyCode/noir/acvm-repo/acir_field", default-features = false }
acir = { version = "1.0.0-beta.4", path = "/mnt/d/FunnyCode/noir/acvm-repo/acir", default-features = false }
acvm = { version = "1.0.0-beta.4", path = "/mnt/d/FunnyCode/noir/acvm-repo/acvm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bristol-circuit = { git = "https://github.com/voltrevo/bristol-circuit", rev = "10ee9c7" }
boolify = { git = "https://github.com/privacy-scaling-explorations/boolify", rev = "380a815" }